# rmcp-in-process-transport

./: Cargo.toml  README.md
.claude/commands/: e2e.md
examples/: in_process.rs
examples/common/: calculator.rs
src/: in_process.rs  lib.rs
